SLING-10037: added maven dependency scope