@@ -104,15 +104,6 @@
                     <attach>false</attach>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>
-                        --illegal-access=warn
-                    </argLine>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
     <dependencies>
@@ -255,12 +246,14 @@
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
             <version>1.3.2</version>
+            <scope>provided</scope>
         </dependency>
         <!-- sun.misc.Unsafe package support required for java 1.8 compiler -->
         <dependency>
             <groupId>com.headius</groupId>
             <artifactId>unsafe-mock</artifactId>
             <version>8.92.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
